# In-HousePOC3

./: pyproject.toml
in_housepoc3/: .gitignore  CSVversExtractionFeatureRiemann.ipynb  DownloadRawScript.ipynb  LaptopLinearRegression.ipynb  LinearRegression.ipynb  MNE.ipynb  Openneuro.ipynb  PipelineCSVRiemannian.ipynb  PipelineFIFRiemannian.ipynb  PipelineFIFXGBoost.ipynb  PreprocessingScript.ipynb  Untitled.ipynb  XGBoost.ipynb  [LP]LinearRegression.ipynb  [custom]02_initial_data_check.ipynb  bridge_lemon_epoch.ipynb  eegraphsc.py  read_bids_datasets.ipynb  requirements.txt
in_housepoc3/.ipynb_checkpoints/: Openneuro-checkpoint.ipynb
in_housepoc3/data/: _RawSubList.csv  clab.csv
in_housepoc3/data/Lemon_PreDict/sub-032301/: sub-032301_EC1_eeg.fif  sub-032301_EC2_eeg.fif  sub-032301_EC3_eeg.fif  sub-032301_EC4_eeg.fif  sub-032301_EC5_eeg.fif  sub-032301_EC6_eeg.fif  (+10 more)
in_housepoc3/pdata/: result.csv  sub-032301.csv  sub-032302.csv  sub-032303.csv  sub-032304.csv  sub-032305.csv  sub-032306.csv  sub-032307.csv  sub-032308.csv  sub-032309.csv  sub-032310.csv  sub-032311.csv  sub-032312.csv  sub-032313.csv  sub-032314.csv  sub-032315.csv  sub-032316.csv  sub-032317.csv  sub-032318.csv  sub-032319.csv  sub-032320.csv  sub-032321.csv  sub-032322.csv  sub-032323.csv  sub-032324.csv  sub-032325.csv  sub-032326.csv  sub-032327.csv  sub-032328.csv  sub-032329.csv  sub-032330.csv  sub-032331.csv  sub-032332.csv  sub-032333.csv  sub-032334.csv  sub-032336.csv  sub-032337.csv  sub-032338.csv  sub-032339.csv  sub-032340.csv  (+19 more)
in_housepoc3/tools/: eegraphsc.py
(+3375 files in other folders)
