[tool.poetry]
name = "in-housepoc3"
version = "0.1.0"
description = ""
authors = ["SPierre-Eloy <pierre-eloy.sylvestre@epitech.eu>"]
readme = "README.md"
packages = [{include = "in_housepoc3"}]

[tool.poetry.dependencies]
python = "^3.8"
mne = "^1.4.2"
sklearn = "^0.0.post5"
scikit-learn = "^1.3.0"
pyvistaqt = "^0.11.0"
ipywidgets = "^8.0.7"
pyqt5-tools = "^5.15.9.3.3"
nibabel = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
